# Italtensor

./: README.md  app_restore.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.pytest-tmp-calibration/: test_import_reviewed_labels_apcurrent  test_import_reviewed_labels_wicurrent  test_keras_load_without_tensorcurrent  test_load_preset_accepts_plaincurrent  test_load_preset_rejects_missicurrent  test_numpy_fallback_model_bundcurrent  test_preset_round_trip_preservcurrent  test_report_export_json_and_macurrent  test_save_as_preset_uses_existcurrent
.pytest-tmp-full-neighborhood/: test_export_report_allows_datacurrent  test_export_report_rejects_empcurrent  test_import_reviewed_labels_apcurrent  test_import_reviewed_labels_wicurrent  test_load_csv_dataset_accepts_current  test_load_csv_dataset_does_notcurrent  test_load_csv_dataset_rejects_current  test_save_preset_uses_current_current
.pytest-tmp-full-prototype/: test_import_reviewed_labels_apcurrent  test_import_reviewed_labels_wicurrent  test_load_csv_dataset_accepts_current  test_load_csv_dataset_does_notcurrent  test_load_csv_dataset_rejects_current
.pytest-tmp-neighborhood/: test_export_report_allows_datacurrent  test_export_report_rejects_empcurrent  test_import_reviewed_labels_apcurrent  test_import_reviewed_labels_wicurrent  test_keras_load_without_tensorcurrent  test_load_preset_accepts_plaincurrent  test_load_preset_rejects_missicurrent  test_numpy_fallback_model_bundcurrent  test_preset_round_trip_preservcurrent  test_report_export_json_and_macurrent  test_save_as_preset_uses_existcurrent  (+2 more)
(+145 files in other folders)
